--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 # Bulk RNA-seq Pipeline (edgeR + voom/limma)
-
-![R](https://img.shields.io/badge/R-276DC3?logo=r&logoColor=white)
-![Bioconductor](https://img.shields.io/badge/Bioconductor-3B4BAA?logo=bioconductor&logoColor=white)
-![Conda](https://img.shields.io/badge/conda-44A833?logo=anaconda&logoColor=white)
+```md
+![R](https://img.shields.io/badge/R-276DC3?logo=r&logoColor=white) ![Bioconductor](https://img.shields.io/badge/Bioconductor-3B4BAA?logo=bioconductor&logoColor=white) ![Conda](https://img.shields.io/badge/conda-44A833?logo=anaconda&logoColor=white)
 
 ## What this script does
 Given a **raw counts matrix** (genes × samples) and a **metadata table**, the script:
@@ -32,3 +30,4 @@ conda create -n rnaseq-r -y -c conda-forge -c bioconda \
   r-base r-optparse r-ggplot2 r-reshape2 r-data.table r-readxl \
   bioconductor-edger bioconductor-limma
 conda activate rnaseq-r
+```
